2010-05-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘tmpfile’.

	* rcs.c (sendmail, buildeltatext): Use ‘tmpfile’.

2010-05-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	rcs: Fix syntax error when ‘--with-mailer=MAILER’.

	Regression introduced 2010-03-30, "Abstract writes to stderr".
	* rcs.c (sendmail): Add missing semicolon.

2010-05-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use #define for ‘rcsdir’; rename its -len var conventionally.

	* rcsfnms.c (rcsdir): Convert string var to #define.
	(rcsdirlen): Rename from ‘rcslen’.
	(rcssuffix): Use ‘rcsdirlen’.
	(fin2open): Use ‘rcsdirlen’ directly.

2010-05-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] For collecting deltas, replace file-static var w/ local var.

	* ci.c (gendeltas): Delete var.
	(addelta): Take ‘struct hshentries **’; pass it to ‘gr_revno’.
	(main): Use local var for collecting deltas; update call to ‘addelta’.
	* co.c (gendeltas): Delete var.
	(main): Use local var for collecting deltas.
	* rcs.c (gendeltas): Delete var.
	(removerevs, main): Use local var for collecting deltas.

2010-05-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: delta_from_ref

	* base.h (delta_from_ref): New func decl.
	* rcsrev.c (delta_from_ref): New func.
	(branchtip): Use ‘delta_from_ref’.
	* ci.c (addbranch, main): Likewise.
	* co.c (addjoin): Likewise.
	* rcs.c (setlock, dolocks, domessages, rcs_setstate): Likewise.
	* rcsdiff.c (main): Likewise.
	* rcsmerge.c (main): Likewise.

2010-05-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Resolve ‘BRNUM.’ correctly.

	Regression introduced 2010-04-21, "Add abstraction: fully_numeric".
	* rcsrev.c (fully_numeric): When expanding "BRNUM."--note
	trailing dot--append only the non-branch part of the tip revision.

2010-05-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Make ‘genrevs’, ‘gr_revno’ able to inhibit storing.

	* rcsrev.c (STORE_MAYBE, CLEAR_MAYBE): New macros.
	(genbranch, genrevs): Use ‘STORE_MAYBE’, ‘CLEAR_MAYBE’.