@@ -48,6 +48,9 @@ TINYK (log);
 TINYK (next);
 TINYK (state);
 TINYK (strict);
+#if COMPAT2
+TINYK (suffix);
+#endif
 TINYK (symbols);
 TINYK (text);
 
